test/cli/test-image-validating-policy/with-context/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  containers: []
