test/cli/test-image-validating-policy/with-context/context.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: compiled-context
spec:
  resources:
    - apiVersion: v1
      kind: ConfigMap
      metadata:
        name: settings
        namespace: default
      data:
        enabled: "true"
